--- a/essets/css/style.css
+++ b/essets/css/style.css
@@ -1,36 +1,21 @@
 *{
   box-sizing: border-box;
 }
-input[type="text"], input[type="password"]{
-  padding: 5px 10px;
-  border-radius: 10px;
+
+.card-wrapper{
+  width: 500px;
+  display: flex;
+  border: 2px solid black;
 }
 
-input:required{
-  display: inline-block;
-  position: relative;
-  border: 2px solid orange;
+.profile-image{
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  clip-path: polygon(0 0, 100% 0%, 80% 100%, 0% 100%);
 }
 
-input:focus{
-  outline: none;
-}
-input:focus::placeholder{
-  font-style: italic;
-  font-size: 15px;
-}
-
-input::placeholder{
-  padding-left: 5px;
-  font-weight: bold;
-
-}
-
-input:valid{
-  border: 4px solid greenyellow;
-}
-legend{
-  background-color: orange;
-  padding: 0 10px;
-
+.photo-wrapper{
+  height: 100%;
+  flex-basis: 200px;
 }
