--- a/essets/css/style.css
+++ b/essets/css/style.css
@@ -1,21 +1,27 @@
+@import "./reset.css";
 *{
   box-sizing: border-box;
 }
 
-.card-wrapper{
-  width: 500px;
-  display: flex;
-  border: 2px solid black;
+header{
+  height: 200px;
+  background-color: orange;
 }
 
-.profile-image{
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-  clip-path: polygon(0 0, 100% 0%, 80% 100%, 0% 100%);
+footer{
+  height: 200px;
+  background-color:turquoise
 }
 
-.photo-wrapper{
-  height: 100%;
-  flex-basis: 200px;
+article{
+  max-width: 1200px;
+  margin: 0 auto;
+  text-justify: newspaper;
+  font-size: 1.2em;
+  line-height: 1.5;
+}
+
+p{
+  column-width: 280px;
+  column-rule: 2px solid black;
 }
